--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="h-full">
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/src/assets/logo.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>CapiLog</title>
 	</head>
-	<body>
+	<body class="h-full">
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
